--- a/pkg/admin/gui/front-end/html/tasks_transfer_rules_page.html
+++ b/pkg/admin/gui/front-end/html/tasks_transfer_rules_page.html
@@ -128,7 +128,7 @@
                 <th></th>
                 <th>{{ index $.tab "type" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipType" }}"></i></th>
                 <th>{{ index $.tab "arguments" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipArguments" }}"></i></th>
-                <th class="text-end"><strong>{{ index $.tab "trick" }}</strong> <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipTrick" }}"></i></th>
+                <th class="text-end"><strong>{{ index $.tab "trick" }}</strong> <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" style="cursor: help;" data-bs-title="{{ index $.tab "tooltipTrick" }}"></i></th>
             </tr>
         </thead>
         <tbody>
@@ -521,7 +521,7 @@
                 <th></th>
                 <th>{{ index $.tab "type" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipType" }}"></i></th>
                 <th>{{ index $.tab "arguments" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipArguments" }}"></i></th>
-                <th class="text-end"><strong>{{ index $.tab "trick" }}</strong> <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipTrick" }}"></i></th>
+                <th class="text-end"><strong>{{ index $.tab "trick" }}</strong> <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" style="cursor: help;" data-bs-title="{{ index $.tab "tooltipTrick" }}"></i></th>
             </tr>
         </thead>
         <tbody>
@@ -914,7 +914,7 @@
                 <th></th>
                 <th>{{ index $.tab "type" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipType" }}"></i></th>
                 <th>{{ index $.tab "arguments" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipArguments" }}"></i></th>
-                <th class="text-end"><strong>{{ index $.tab "trick" }}</strong> <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipTrick" }}"></i></th>
+                <th class="text-end"><strong>{{ index $.tab "trick" }}</strong> <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" style="cursor: help;" data-bs-title="{{ index $.tab "tooltipTrick" }}"></i></th>
             </tr>
         </thead>
         <tbody>
