--- a/pkg/admin/gui/front-end/html/editTasks.html
+++ b/pkg/admin/gui/front-end/html/editTasks.html
@@ -304,7 +304,7 @@
             {{ $args := .Args }}
             {{ range .IcapOnErrorOptions }}
             <option value="{{ . }}" {{ if eq (index $args "onError") . }}selected{{ end }}>
-                {{ if eq . "" }}vide{{ else }}{{ . }}{{ end }}
+                {{ if eq . "" }}do nothing{{ else }}{{ . }}{{ end }}
             </option>
             {{ end }}
         </select>
