--- a/pkg/admin/gui/front-end/html/index.html
+++ b/pkg/admin/gui/front-end/html/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/webui/static/css/style.css">
     <link rel="icon" type="image/png" href="/webui/static/assets/icon_waarp.png">
+    <script src="/webui/static/javaScript/undefined.js"></script>
     {{ block "head" . }}{{ end }}
   </head>
 
