--- a/pkg/admin/gui/front-end/html/editTasks.html
+++ b/pkg/admin/gui/front-end/html/editTasks.html
@@ -176,7 +176,7 @@
         <button type="button"
                 class="btn btn-outline-primary btn-sm"
                 onclick="addField(this)">
-            add
+            {{ index .tab "add" }}
         </button>
     </div>
 </div>
