--- a/pkg/admin/gui/front-end/html/transfer_monitoring_page.html
+++ b/pkg/admin/gui/front-end/html/transfer_monitoring_page.html
@@ -3,6 +3,7 @@
   <link rel="stylesheet" href="/webui/static/css/style.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
   <script src="/webui/static/javaScript/tooltip.js"></script>
+  <script src="/webui/static/javaScript/fields.js "></script>
   <script src="/webui/static/javaScript/refreshTableTransfer.js"></script>
   <script>window.modalOpen = "{{ .modalOpen }}";</script>
   <script src="/webui/static/javaScript/displayErr.js"></script>
@@ -33,7 +34,15 @@
           {{ else if eq .Status "ERROR" }}
               <span class="fw-bold text-danger">{{ index $.tab "error" }}</span>
           {{ else if eq .Status "PLANNED" }}
-              <span class="fw-bold">{{ index $.tab "planned" }}</span>
+              <span class="fw-bold text-info">{{ index $.tab "planned" }}</span>
+          {{ else if eq .Status "RUNNING" }}
+              <span class="fw-bold text-primary">{{ index $.tab "running" }}</span>
+          {{ else if eq .Status "PAUSED" }}
+              <span class="fw-bold text-warning">{{ index $.tab "paused" }}</span>
+          {{ else if eq .Status "INTERRUPTED" }}
+              <span class="fw-bold text-secondary">{{ index $.tab "interrupted" }}</span>
+          {{ else if eq .Status "CANCELLED" }}
+              <span class="fw-bold text-muted">{{ index $.tab "cancelled" }}</span>
           {{ else }}
               <span class="fw-bold">{{ .Status }}</span>
           {{ end }}
@@ -41,8 +50,10 @@
         <td {{ if gt (len .SrcFilename) 15 }} title="{{ .SrcFilename }}" data-bs-toggle="tooltip" {{ end }}>
         {{ if gt (len .SrcFilename) 15 }}
             {{ slice .SrcFilename 0 15 }}...
-        {{ else }}
+        {{ else if .SrcFilename }}
             {{ .SrcFilename }}
+        {{ else }}
+          {{ .DestFilename }}
         {{ end }}
         </td>
         <td>{{ .Rule }}</td>
@@ -112,18 +123,38 @@
                     </div>
                     <hr style="border-top: 1px solid #ababab;">
                     <div class="flex-label-input mb-2">
-                        <label class="col-form-label label-light-bold me-3">{{ index $.tab "localPath" }} :</label>
-                        <input type="text" class="form-control-plaintext input-auto-width" value="{{ displayOrDefault .LocalPath (index $.tab "undefined") }}" readonly>
+                      <label class="col-form-label label-light-bold me-3">{{ index $.tab "localPath" }} :</label>
+                      <input type="text" class="form-control-plaintext input-auto-width" value="{{ displayOrDefault .LocalPath (index $.tab "undefined") }}" readonly>
                     </div>
                     <hr style="border-top: 1px solid #ababab;">
                     <div class="flex-label-input mb-2">
-                        <label class="col-form-label label-light-bold me-3">{{ index $.tab "remotePath" }} :</label>
-                        <input type="text" class="form-control-plaintext input-auto-width" value="{{ displayOrDefault .RemotePath (index $.tab "undefined") }}" readonly>
+                      <label class="col-form-label label-light-bold me-3">{{ index $.tab "remotePath" }} :</label>
+                      <input type="text" class="form-control-plaintext input-auto-width" value="{{ displayOrDefault .RemotePath (index $.tab "undefined") }}" readonly>
                     </div>
                     <hr style="border-top: 1px solid #ababab;">
                     <div class="flex-label-input mb-2">
-                        <label class="col-form-label label-light-bold me-3">{{ index $.tab "bytesTransferred" }} :</label>
-                        <input type="text" class="form-control-plaintext input-auto-width" value="{{ displayOrDefault .Progress (index $.tab "undefined") }}" readonly>
+                        <label class="col-form-label label-light-bold me-3">{{ index $.tab "rule" }} :</label>
+                        <input type="text" class="form-control-plaintext input-auto-width" value="{{ displayOrDefault .Rule (index $.tab "undefined") }}" readonly>
+                    </div>
+                    <hr style="border-top: 1px solid #ababab;">
+                    <div class="flex-label-input mb-2">
+                        <label class="col-form-label label-light-bold me-3">{{ index $.tab "start" }} :</label>
+                        <input type="text" class="form-control-plaintext input-auto-width" value="{{ displayOrDefault (formatDateTime .Start $.Request $.language) (index $.tab "undefined") }}" readonly>
+                    </div>
+                    <hr style="border-top: 1px solid #ababab;">
+                    <div class="flex-label-input mb-2">
+                        <label class="col-form-label label-light-bold me-3">{{ index $.tab "end" }} :</label>
+                        <input type="text" class="form-control-plaintext input-auto-width" value="{{ if contains (formatDateTime .Stop $.Request $.language) "01/01/0001" }}{{ index $.tab "undefined" }}{{ else }}{{ formatDateTime .Stop $.Request $.language }}{{ end }}" readonly>
+                    </div>
+                    <hr style="border-top: 1px solid #ababab;">
+                    <div class="flex-label-input mb-2">
+                      <label class="col-form-label label-light-bold me-3">{{ index $.tab "bytesTransferred" }} :</label>
+                      <input type="text" class="form-control-plaintext input-auto-width" value="{{ displayOrDefault .Progress (index $.tab "undefined") }} ({{ humanizeSize .Progress }})" readonly>
+                    </div>
+                    <hr style="border-top: 1px solid #ababab;">
+                    <div class="flex-label-input mb-2">
+                        <label class="col-form-label label-light-bold me-3">{{ index $.tab "fileSize" }} :</label>
+                        <input type="text" class="form-control-plaintext input-auto-width" value="{{ displayOrDefault .Filesize (index $.tab "undefined") }} ({{ humanizeSize .Filesize }})" readonly>
                     </div>
                     <hr style="border-top: 1px solid #ababab;">
                     <div class="flex-label-input mb-2">
@@ -149,18 +180,51 @@
             </div>
         </td>
         <td class="text-end">
-            <button class="btn btn-outline-warning btn-sm me-1" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="{{ index $.tab "pause" }}">
+            <form method="post" style="display:inline;">
+              <input type="hidden" name="pauseTransferID" value="{{ .ID }}">
+              <button type="submit" class="btn btn-outline-warning btn-sm me-1" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="{{ index $.tab "pause" }}" {{if eq .Status "RUNNING"}}{{else}}disabled{{end}}>
                 <i class="bi bi-pause"></i>
-            </button>
-            <button class="btn btn-outline-success btn-sm me-1" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="{{ index $.tab "resume" }}">
-                <i class="bi bi-play"></i>
-            </button>
-            <button class="btn btn-outline-danger btn-sm me-1" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="{{ index $.tab "cancel" }}">
+              </button>
+            </form>
+            <form method="post" style="display:inline;">
+              <input type="hidden" name="resumeTransferID" value="{{ .ID }}">
+              <button class="btn btn-outline-success btn-sm me-1" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="{{ index $.tab "resume" }}" {{if or (eq .Status "PAUSED") (eq .Status "ERROR") (eq .Status "INTERRUPTED")}} {{else}}disabled{{end}}>
+                  <i class="bi bi-play"></i>
+              </button>
+            </form>
+            <form method="post" style="display:inline;">
+              <input type="hidden" name="cancelTransferID" value="{{ .ID }}">
+              <button class="btn btn-outline-danger btn-sm me-1" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="{{ index $.tab "cancel" }}" {{if not (or (eq .Status "DONE") (eq .Status "CANCELLED"))}}{{else}}disabled{{end}}>
+                  <i class="bi bi-x-circle"></i>
+              </button>
+            </form>
+            <button class="btn btn-outline-info btn-sm me-1" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="{{ index $.tab "reschedule" }} {{if or (eq .Status "PAUSED") (eq .Status "ERROR") (eq .Status "INTERRUPTED") (eq .Status "PLANNED")}} {{else}}disabled{{end}}"
+                    onclick="bootstrap.Modal.getOrCreateInstance(document.getElementById('rescheduleTransferModal_{{ .ID }}')).show();">
                 <i class="bi bi-x-circle"></i>
             </button>
-            <button class="btn btn-outline-info btn-sm me-1" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="{{ index $.tab "reschedule" }}">
-                <i class="bi bi-arrow-repeat"></i>
-            </button>
+            <div class="modal fade" id="rescheduleTransferModal_{{ .ID }}" tabindex="-1" aria-labelledby="rescheduleTransferModalLabel_{{ .ID }}" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+              <div class="modal-content">
+                <form method="post" class="p-3 border rounded bg-light">
+                  <input type="hidden" name="rescheduleTransferID" value="{{ .ID }}">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="rescheduleTransferModalLabel_{{ .ID }}">{{ index $.tab "reschedule" }}: {{ .SrcFilename }}</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="form-input">
+                      <label class="col-form-label">{{ index $.tab "date" }} :</label>
+                      <input type="datetime-local" name="rescheduleTransferDate" class="form-control" required>
+                    </div>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{ index $.tab "close" }}</button>
+                    <button type="submit" class="btn btn-success ms-3">{{ index $.tab "apply" }}</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
         </td>
     </tr>
     {{ end }}
@@ -200,27 +264,13 @@
                   </div>
                   <hr style="border-top: 1px solid #ababab;">
                   <div class="form-input mb-2">
-                    <label class="col-form-label">{{ index .tab "pathDestination" }} :</label>
-                    <input type="text" name="transferOut" class="form-control">
+                    <label class="col-form-label">({{ index .tab "optional" }}) {{ index .tab "pathDestination" }} :</label>
+                    <input type="text" name="transferOut" class="form-control" required>
                   </div>
                   <hr style="border-top: 1px solid #ababab;">
-                  <div class="form-input d-flex align-items-center">
-                    <label class="col-form-label me-3">{{ index .tab "connectionDirection" }} :</label>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" name="connectionWay" id="connectionWay" value="true">
-                    </div>
-                 </div>
-                  <hr style="border-top: 1px solid #ababab;">
-                  <div class="form-input d-flex align-items-center">
-                    <label class="col-form-label me-3">{{ index .tab "transferDirection" }} :</label>
-                    <div class="form-check form-check-inline">
-                        <input class="form-check-input" type="checkbox" name="transferWay" id="transferWay" value="true">
-                    </div>
-                 </div>
-                 <hr style="border-top: 1px solid #ababab;">
                   <div class="form-input mb-2">
-                    <label class="col-form-label">{{ index .tab "localClientName" }} :</label>
-                    <input type="text" name="transferClient" class="form-control">
+                    <label class="col-form-label">{{ index .tab "rule" }} :</label>
+                    <input type="text" name="transferRule" class="form-control" required>
                   </div>
                   <hr style="border-top: 1px solid #ababab;">
                   <div class="form-input mb-2">
@@ -230,27 +280,35 @@
                   <hr style="border-top: 1px solid #ababab;">
                   <div class="form-input mb-2">
                     <label class="col-form-label">{{ index .tab "remoteAccountName" }} :</label>
-                    <input type="text" name="transferLogin" class="form-control">
+                    <input type="text" name="transferLogin" class="form-control" required>
                   </div>
                   <hr style="border-top: 1px solid #ababab;">
                   <div class="form-input mb-2">
-                    <label class="col-form-label">{{ index .tab "rule" }} :</label>
-                    <input type="text" name="transferRule" class="form-control">
+                    <label class="col-form-label">{{ index .tab "localClientName" }} :</label>
+                    <input type="text" name="transferClient" class="form-control" required>
                   </div>
                   <hr style="border-top: 1px solid #ababab;">
                   <div class="form-input mb-2">
-                    <label class="col-form-label">{{ index .tab "date" }} :</label>
+                    <label class="col-form-label">{{ index .tab "date" }} <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index .tab "tooltipDate" }}"></i> :</label>
                     <input type="datetime-local" name="transferDate" class="form-control">
                   </div>
                   <hr style="border-top: 1px solid #ababab;">
                   <div class="form-input mb-2">
-                    <label class="col-form-label">{{ index .tab "filenameAfterTransfer" }} :</label>
-                    <input type="text" name="transferName" class="form-control">
-                  </div>
-                  <hr style="border-top: 1px solid #ababab;">
-                  <div class="form-input mb-2">
-                    <label class="col-form-label">{{ index .tab "infosTransfer" }} :</label>
-                    <input type="text" name="transferInfo" class="form-control">
+                      <label class="col-form-label">({{ index .tab "optional" }}) {{ index .tab "infosTransfer" }} :</label>
+                      <div id="infoTransferContainer">
+                          <div class="input-group mb-2">
+                              <input type="text" name="transferInfosKeys[]" class="form-control" placeholder="{{ index .tab "fieldName" }}">
+                              <input type="text" name="transferInfosValues[]" class="form-control" placeholder="{{ index .tab "value" }}">
+                            <button type="button" class="btn btn-outline-danger btn-sm" onclick="removeField(this)">
+                                <i class="bi bi-trash"></i>
+                              </button>
+                          </div>
+                      </div>
+                      <button type="button"
+                              class="btn btn-outline-primary btn-sm"
+                              onclick="addField(this)">
+                          {{ index .tab "add" }}
+                      </button>
                   </div>
                 </div>
                 <div class="modal-footer">
@@ -269,9 +327,11 @@
     <div class="collapse" id="filterCollapse">
       <form method="get" class="p-3 border rounded bg-light">
         <label class="ms-3">{{ index .tab "sort" }}:
-          <select name="orderAsc" class="form-select d-inline w-auto">
-              <option value="false" {{ if not .filter.OrderAsc }}selected{{ end }}>Date ↓</option>
-              <option value="true" {{ if .filter.OrderAsc }}selected{{ end }}>Date ↑</option>
+          <select name="order" class="form-select d-inline w-auto">
+            <option value="date-start" {{ if and (eq .filter.OrderBy "start") (not .filter.OrderAsc) }}selected{{ end }}>Date ↓</option>
+            <option value="date-end" {{ if and (eq .filter.OrderBy "start") (.filter.OrderAsc) }}selected{{ end }}>Date ↑</option>
+            <option value="id-start" {{ if and (eq .filter.OrderBy "id") (not .filter.OrderAsc) }}selected{{ end }}>ID ↓</option>
+            <option value="id-end" {{ if and (eq .filter.OrderBy "id") (.filter.OrderAsc) }}selected{{ end }}>ID ↑</option>
           </select>
         </label>
         <label class="ms-3">{{ index .tab "limit" }}:
@@ -294,7 +354,7 @@
       <thead class="table-light">
         <tr>
             <th>
-              <i class="bi bi-info-circle" 
+              <i class="bi bi-question-circle" 
                 data-bs-toggle="tooltip"
                 data-bs-html="true"
                 data-bs-placement="right"
